--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 .file-upload {
     background-color: #ffffff;
+text-align: center;
     width: 600px;
     margin: 0 auto;
     padding: 20px;
