--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     text-align: center;
 	font-size: large;
 	font-weight: bold;
-	padding: 50px;
+	padding: 50px 0px;
 }
 
 .drag-text h3 {
